--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "react": "^18.0.0",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
     "react-paginate": "8.1.2",
