--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,12 +10,15 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "lodash": "^4.17.21",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
     "react-paginate": "8.1.2",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
